--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,7 @@ jobs:
       uses: madrapps/jacoco-report@v1.6.1
       with:
         paths: ${{ github.workspace }}/**/build/reports/jacoco/report.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
