--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Run unit tests
+      run: mvn test
+
     - name: Generate coverage report
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
