update artifact path.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -69,4 +69,4 @@ jobs:
       with:
         name: artifacts
         path: |
-          ${{ github.workspace }}/**/build/
+          ${{ github.workspace }}/build/
