--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,11 +27,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Run unit tests
+    - name: Build, test and package application
       run: mvn verify
-
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
     - name: Generate coverage report
       id: jacoco
@@ -58,11 +55,17 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
 
-    - name: Static code analyze
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=smling_secure-coding-demo -Pcoverage
+
+#    - name: Static code analyze
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=smling_secure-coding-demo -Pcoverage
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
