update sonarcloud dependency check.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<formats>
+						<format>HTML</format>
+						<format>JSON</format>
+					</formats>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
