--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,11 +59,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: >
-          mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.10.0.2594:sonar \
-          -Dsonar.projectKey=smling_secure-coding-demo \
-          -Dsonar.dependencyCheck.jsonReportPath=${{ github.workspace }}/target/dependency-check-report.json \
-          -Dsonar.dependencyCheck.htmlReportPath=${{ github.workspace }}/target/dependency-check-report.html
+      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.10.0.2594:sonar -Dsonar.projectKey=smling_secure-coding-demo -Dsonar.dependencyCheck.jsonReportPath=${{ github.workspace }}/target/dependency-check-report.json -Dsonar.dependencyCheck.htmlReportPath=${{ github.workspace }}/target/dependency-check-report.html
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
